# ntt-autogen

./: pyproject.toml
ntt_autogen/: __init__.py  __init__.pyi  autogen.py  binding.py  template_gen.py
ntt_autogen/analyze/: __init__.py  parser.py  py_enum.py  py_enum_constant.py  py_field.py  py_function.py  py_object.py  py_struct.py  py_typedef.py
ntt_autogen/models/: __init__.py  settings.py
ntt_autogen/utils/: __init__.py  cache.py  dependencies_utils.py  log.py
tests/: test_parse_function.py  test_parse_typedef.py
tests/analyze/: test_parse_enum.py  test_parse_struct.py
tests/templates/: test_template_gen.py
